# Oneiro

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Oneiro.code-workspace  README.md  appveyor.yml  vcpkg.json  xmake.lua
Engine/: CMakeLists.txt  vcpkg.json  xmake.lua
Engine/Configs/: Engine.ini
Engine/Include/Oneiro/Common/: CVars.hpp  Common.hpp  EngineApi.hpp  IApplication.hpp  IModule.hpp  IRenderer.hpp  JobSystem.hpp  Layer.hpp  LayerManager.hpp  Loggger.hpp  ModuleManager.hpp  Utils.hpp
Engine/Include/Oneiro/Common/FileSystem/: ConfigFile.hpp  DynamicLibrary.hpp  Path.hpp
Engine/Include/Oneiro/Common/Math/: Math.hpp
Engine/Include/Oneiro/Common/RHI/: IPipeline.hpp  IRHI.hpp  IRenderGraph.hpp  IShader.hpp  RHI_Defines.hpp
Engine/Include/Oneiro/Common/Renderer/: IBuffer.hpp  ICommandBuffer.hpp  IPipeline.hpp  IRenderPass.hpp  IRendererBackend.hpp  IShader.hpp  Renderer.hpp
Engine/Include/Oneiro/Common/WM/: IWindow.hpp
Engine/Include/Oneiro/Common/World/: World.hpp
Engine/Include/Oneiro/Core/: Config.hpp  Engine.hpp  EntryPoint.hpp  Input.hpp  Random.hpp  Root.hpp
Engine/Include/Oneiro/Luau/: LuauCore.hpp  LuauFunction.hpp  LuauState.hpp
Engine/Include/Oneiro/Modules/WM/: SDLWindow.hpp
Engine/Include/Oneiro/Renderer/: ParticleSystem.hpp  Renderer.hpp  Renderer2D.hpp
Engine/Include/Oneiro/Renderer/GL/: GLRenderer.hpp
Engine/Include/Oneiro/Renderer/ImGui/: ImGui.hpp
Engine/Include/Oneiro/Renderer/OpenGL/: Base.hpp  Buffer.hpp  ErrorHandler.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Sprite2D.hpp
Engine/Include/Oneiro/World/: Components.hpp  Entity.hpp  World.hpp
Engine/Modules/: xmake.lua
Engine/Modules/Oneiro-Module-RHI-GL/: module.json  xmake.lua
Engine/Modules/Oneiro-Module-RHI-GL/Include/: GLRHI.mpp
Engine/Modules/Oneiro-Module-RHI-GL/Source/: GLRHI.cpp
Engine/Modules/Oneiro-Module-RHI-GL/Source/Fwog/: DebugMarker.cpp  Fence.cpp
Engine/Modules/Oneiro-Module-Renderer-Quad/: module.json  xmake.lua
Engine/Modules/Oneiro-Module-Renderer-Quad/Include/: QuadRenderer.mpp
Engine/Modules/Oneiro-Module-Renderer-Quad/Shaders/: quad.slang
Engine/Modules/Oneiro-Module-Renderer-Quad/Source/: QuadRenderer.cpp
Engine/Modules/Oneiro-Module-WM-SDL2/: module.json  xmake.lua
Engine/Modules/Oneiro-Module-WM-SDL2/Include/: SDLWindow.mpp
Engine/Modules/Oneiro-Module-WM-SDL2/Source/: SDLWindow.cpp
Engine/Modules/RHI-GL/: CMakeLists.txt
Engine/Modules/RHI-GL/Include/: GLRHI.hpp
Engine/Modules/RHI-GL/Source/: GLRHI.cpp
Engine/Modules/WM-SDL/: CMakeLists.txt  module.json
Engine/Modules/WM-SDL/Source/: SDLWindow.cpp
Engine/RHI-OpenGL460/Include/: GLRHI.mpp
Engine/RHI-OpenGL460/Include/Fwog/: Buffer.h  Rendering.h
Engine/RHI-OpenGL460/Source/: GLRHI.cpp
Engine/RHI-OpenGL460/Source/Fwog/: Buffer.cpp  Pipeline.cpp  Rendering.cpp  Shader.cpp  Texture.cpp
Engine/RHI-OpenGL460/Source/Fwog/detail/: ApiToEnum.cpp  FramebufferCache.cpp  PipelineManager.cpp
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Include/Oneiro/Common/: AssetInfo.mpp  AssetsManager.mpp  AssetsProvider.mpp  CVars.hpp  CVars.mpp  Common.hpp  Config.hpp  EngineApi.hpp  EngineApi.mpp  IApplication.mpp  IAsset.mpp  IModule.mpp  ImGuiManager.mpp  JobManager.hpp  JobManager.mpp  Logger.mpp  ModuleManager.mpp  Profiler.hpp  Random.hpp  StdAfx.hpp
Engine/Runtime/Include/Oneiro/Core/: Engine.mpp  EntryPoint.hpp
Engine/Runtime/Include/Oneiro/Rendering/: Renderer2D.hpp
Engine/Runtime/Source/Common/: AssetInfo.cpp  AssetsManager.cpp  CVars.cpp  EngineApi.cpp  IApplication.cpp  IModule.cpp  ImGuiManager.cpp  JobManager.cpp  Logger.cpp  ModuleManager.cpp  Random.cpp
Engine/Runtime/Source/Common/Assets/: AssetInfo.cpp  AssetsManager.cpp
Engine/Runtime/Source/Common/AssetsProviders/: WorldAsset.cpp
Engine/Runtime/Source/Common/ECS/: IComponent.cpp  World.cpp
Engine/Runtime/Source/Common/FileSystem/: ConfigFile.cpp  DynamicLibrary.cpp  FileSystem.cpp  JSONFile.cpp  Path.cpp
Engine/Runtime/Source/Common/Math/: Math.cpp
Engine/Runtime/Source/Common/RHI/: IBuffer.cpp  ICommandBuffer.cpp  IPipeline.cpp  IRHI.cpp  IRenderGraph.cpp  IShader.cpp  ITexture.cpp  RHI_Defines.cpp  ShaderCompiler.cpp
Engine/Runtime/Source/Common/WM/: IWindow.cpp  IWindowManager.cpp
Engine/Runtime/Source/Common/World/: World.cpp
Engine/Runtime/Source/Core/: Engine.cpp
Engine/Shaders/OpenGL/: circle.glsl  line.glsl  main.glsl  point.glsl  quad.glsl
Engine/Source/Common/: EngineApi.cpp  IApplication.cpp  JobSystem.cpp  Layer.cpp  LayerManager.cpp  Logger.cpp  Random.cpp
Engine/Source/Common/Assets/: WorldAsset.cpp
Engine/Source/Common/FileSystem/: DynamicLibrary.cpp  FileSystem.cpp  Path.cpp
Engine/Source/Common/Math/: Math.cpp
Engine/Source/Common/RHI/: IBuffer.cpp
Engine/Source/Core/: Config.cpp  Engine.cpp  Random.cpp  Root.cpp
Engine/Source/Modules/WM/: SDLWindow.cpp
Engine/Source/Renderer/: ParticleSystem.cpp  Renderer.cpp  Test.cpp
Engine/Source/Renderer/GL/: GLRenderer.cpp
Engine/Source/Renderer/OpenGL/: Buffer.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Sprite2D.cpp  Text.cpp
Engine/Source/Renderer/Vulkan/: Buffer.cpp
Engine/Source/Runtime/: Engine.cpp
Engine/Source/VisualNovel/: VNCore.cpp
Engine/Source/World/: Components.cpp  Entity.cpp  World.cpp
Engine/WM-SDL2/Include/: SDLWindow.mpp
Engine/WM-SDL2/Source/: SDLWindow.cpp
Engine/fwog/: CMakeLists.txt
Engine/fwog/example/: CMakeLists.txt  README.md
Engine/fwog/include/Fwog/: Buffer.h
Engine/fwog/src/: Buffer.cpp  Fence.cpp  Rendering.cpp
Modules/: CMakeLists.txt
Modules/RHI-GL/: CMakeLists.txt  module.json  vcpkg.json
Modules/RHI-GL/Include/: Types.hpp
Modules/WM-SDL/: CMakeLists.txt  vcpkg.json
Modules/WM-SDL/Include/: SDLWindow.hpp
Modules/WM-SDL/Source/: SDLWindow.cpp
SandBox/: CMakeLists.txt  SandBox.oeproject  xmake.lua
SandBox/Assets/Shaders/: line.vert  point.frag  quad.frag  text.frag
SandBox/Assets/Worlds/: test.oeworld
SandBox/Configs/: Game.json
SandBox/Include/: SandBoxApp.mpp
SandBox/Source/: Main.cpp  SandBoxApp.cpp  SandBoxApp.hpp
(+68 files in other folders)
